--- a/Excersices Javascript/Lead Tracker/manifest.json
+++ b/Excersices Javascript/Lead Tracker/manifest.json
@@ -1,9 +1,12 @@
 {
-    "manifest_version": 4,
+    "manifest_version": 3,
     "version": "1.0",
     "name": "leads tracker",
     "action": {
         "default_popup": "index2.html",
         "default_icon" : "icon.png"
-    } 
+    },
+    "permissions": [
+        "tabs"
+    ]       
 }
